# ChatApp

./: .clangd  CMakeLists.txt  CMakePresets.json  README.md
config/: db.conf.example
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp  group.hpp  groupModel.hpp  user.hpp  userModel.hpp
include/server/db/: db.hpp
include/server/model/: friendModel.hpp  group.hpp  groupModel.hpp  groupUser.hpp  offLineMsgModel.hpp  userModel.hpp
include/server/redis/: redis.hpp
src/client/: main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  groupModel.cpp  main.cpp  offLineMsgModel.cpp  userModel.cpp
src/server/db/: db.cpp
src/server/model/: friendModel.cpp  groupModel.cpp  userModel.cpp
src/server/redis/: redis.cpp
